--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "module": "es6",
     "sourceMap": true
   },
