--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Messenger v2",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -18,8 +18,15 @@
   },
   "homepage": "https://github.com/yandex-praktikum/mf.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.5",
+    "babel-jest": "^26.1.0",
     "express": "^4.17.1",
-    "node-dev": "^4.0.0"
+    "jest": "^26.1.0",
+    "node-dev": "^4.0.0",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
