--- a/package.json
+++ b/package.json
@@ -24,8 +24,16 @@
     "@babel/preset-typescript": "^7.10.4",
     "@trust/webcrypto": "^0.9.2",
     "@types/jest": "^26.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "babel-jest": "^26.1.0",
     "css-loader": "^4.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^26.1.0",
