--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "webpack:watch": "npm run webpack:build-dev -- --watch",
     "webpack:serve": "webpack-dev-server --mode development --open --watch",
     "docker:build": "sudo docker build -t volodya262/yandex-messenger .",
-    "docker:run": "sudo docker run -p 4000:4000 -d volodya262/my-node-app"
+    "docker:run": "sudo docker run -p 4000:4000 -d volodya262/yandex-messenger"
   },
   "repository": {
     "type": "git",
@@ -60,6 +60,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "date-fns": "^2.14.0",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "express": "^4.17.1"
   }
 }
