--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "date-fns": "^2.14.0",
+    "express": "^4.17.1",
     "handlebars": "^4.7.6",
-    "express": "^4.17.1"
+    "uuid": "^8.3.0"
   },
   "husky": {
     "hooks": {
